deploy/service-omniportal.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: omniportal
  labels:
    app: omniportal
spec:
  ports:
  - name: http
    port: 5000
    targetPort: 5000
  selector:
    app: omniportal
  type: ClusterIP
